--- a/project/users/templates/login.html
+++ b/project/users/templates/login.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Kennedy Family Recipe App">
-    <meta name="author" content="Patrick Kennedy">
-    <title>Shoppingsubs</title>
-    <!-- styles -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-  </head>
-  <body>
-      <h2>Future site for logging into shoppingsubs</h2>
-  </body>
-</html>
+{% extends '_layout.html' %}
+
+{% block content %}
+
+{% block head_css %}
+<!--<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">-->
+{% endblock %}
+<h1>Login</h1>
+    <p>Page for login</p>
+{% endblock %}
