--- a/project/users/templates/register.html
+++ b/project/users/templates/register.html
@@ -1,1 +1,25 @@
-Register page
+{% extends '_layout.html' %}
+
+{% block content %}
+
+{% block head_css %}
+<!--<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">-->
+{% endblock %}
+<h1>Register</h1>
+    {% from 'includes/_formhelpers.html' import render_field %}
+    <form method='POST' action=''>
+        <div class='form-group'>
+            {{ render_field(form.name, class_='form-control') }}
+        </div>
+        <div class='form-group'>
+            {{ render_field(form.email, class_='form-control') }}
+        </div>
+        <div class='form-group'>
+            {{ render_field(form.password, class_='form-control') }}
+        </div>
+        <div class='form-group'>
+            {{ render_field(form.confirm, class_='form-control') }}
+        </div>
+        <p><input type='submit' class='btn btn-primary' value='Submit'></p>
+    </form>
+{% endblock %}
