--- a/project/main/templates/includes/_navbar.html
+++ b/project/main/templates/includes/_navbar.html
@@ -6,12 +6,19 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
+        {% if session.logged_in %}
           <li><a class="nav-link" href="\">Home</a></li>
           <li><a class="nav-link" href="\products">Products</a></li>
+        {% endif %}
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        {% if session.logged_in %}
+          <li><a class="nav-link">Logged in as: {{ session.name }} </a></li>
+          <li><a class="nav-link" href="\logout">Logout</a></li>
+        {% else %}
           <li><a class="nav-link" href="\register">Register</a></li>
           <li><a class="nav-link" href="\login">Login</a></li>
+        {% endif %}
       </ul>
     </div>
 </nav>
