--- a/project/users/templates/login.html
+++ b/project/users/templates/login.html
@@ -6,5 +6,15 @@
 <!--<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">-->
 {% endblock %}
 <h1>Login</h1>
-    <p>Page for login</p>
+<form action='' method='POST'>
+ <div class='form-group'>
+  <label>Email</label>
+  <input type='text' name='email' class='form-control' value={{request.form.email}}>
+ </div>
+ <div class='form-group'>
+  <label>Password</label>
+  <input type='password' name='password' class='form-control' value={{request.form.password}}>
+ </div>
+ <button type='submit' class='btn btn-primary'>Submit</button>
+</from>
 {% endblock %}
